--- a/Pokedex/pokedex.css
+++ b/Pokedex/pokedex.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background: url("./Animation2.gif") no-repeat;
+    background: url("./a3f855d013fe9efce1807ecf2e95b784.gif") no-repeat;
     background-size: cover;
     overflow: hidden;
     display: flex;
